@@ -48,6 +48,14 @@ public class JaclInterpreter implements org.apache.batik.script.Interpreter {
 
     // org.apache.batik.script.Intepreter implementation
 
+    /**
+     * Returns the content types of the scripting languages this interpreter
+     * handles.
+     */
+    public String[] getMimeTypes() {
+        return JaclInterpreterFactory.JACL_MIMETYPES;
+    }
+
     public Object evaluate(Reader scriptreader) throws IOException {
         return evaluate(scriptreader, "");
     }
